--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,23 @@
-
+spring:
+  redis:
+    host: localhost
+    port: 6379
+  profiles:
+    active: local
+  datasource:
+    url: jdbc:h2:~/refueling;
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    properties:
+      hibernate:
+        format_sql: true
+    open-in-view: off
+    database: h2
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
