--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,13 +5,14 @@ spring:
   profiles:
     active: local
   datasource:
-    url: jdbc:h2:~/refueling;
+#    url: jdbc:h2:~/refueling;
+    url: jdbc:h2:tcp://localhost/~/refueling
     username: sa
     password:
     driver-class-name: org.h2.Driver
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: create
     properties:
       hibernate:
         format_sql: true
@@ -21,3 +22,12 @@ spring:
     console:
       enabled: true
       path: /h2-console
+logging:
+  level:
+    org:
+      hibernate:
+        SQL: DEBUG
+        type:
+          descriptor:
+            sql:
+              BasicBinder: TRACE
