--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,8 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        show_sql: true
+        use_sql_comments: true
     open-in-view: off
     database: h2
   h2:
@@ -26,8 +28,8 @@ logging:
   level:
     org:
       hibernate:
-        SQL: DEBUG
+#        SQL: DEBUG
         type:
           descriptor:
-            sql:
-              BasicBinder: TRACE
+            sql: trace
+#              BasicBinder: TRACE
