--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        globally_quoted_identifiers: false
         show_sql: true
         use_sql_comments: true
     open-in-view: off
