chore : redisson 의존성 추가.  - redis 처리 방식 개선을 위한 redisson 적용을 위해 의존성을 추가.

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     implementation('it.ozimov:embedded-redis:0.7.3') {
         exclude group: "org.slf4j", module: "slf4j-simple"
     }
+    implementation 'org.redisson:redisson-spring-boot-starter:3.16.3'
+
     // for QueryDSL
     implementation group: 'com.querydsl', name: 'querydsl-jpa'
     implementation group: 'com.querydsl', name: 'querydsl-apt'
